--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "townsend",
   "version": "1.0.0",
   "description": "[![Board Status](https://dev.azure.com/dankatdennis/1897d72d-92c1-41f9-8c1e-1dee9eaca720/b6f03113-1fcb-4277-831f-07fafd2de635/_apis/work/boardbadge/c5936587-6c70-4f23-9774-534ff4796146)](https://dev.azure.com/dankatdennis/1897d72d-92c1-41f9-8c1e-1dee9eaca720/_boards/board/t/b6f03113-1fcb-4277-831f-07fafd2de635/Microsoft.RequirementCategory/) The Townsend directive",
-  "main": "babel.config.js",
+  "main": "./dist/main.js",
   "scripts": {
     "dev:electron": "NODE_ENV=development webpack --config webpack.electron.config.js --mode development && electron .",
     "dev:react": "NODE_ENV=development webpack-dev-server --config webpack.react.config.js --mode development",
