--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "antd": "^4.6.4",
     "concurrently": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
