--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/react-codemirror": "^1.0.3",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
@@ -36,11 +37,13 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/codemirror": "0.0.98",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.4",
     "concurrently": "^5.3.0",
     "react": "^16.13.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^16.13.1"
   }
 }
