--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "antd": "^4.6.4",
     "concurrently": "^5.3.0",
     "react": "^16.13.1",
+    "react-codemirror": "^1.0.0",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^16.13.1"
   }
