--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@monaco-editor/react": "^3.6.2",
     "@types/codemirror": "0.0.98",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.4",
+    "codemirror": "^5.58.0",
     "concurrently": "^5.3.0",
+    "monaco-editor": "^0.21.0",
     "react": "^16.13.1",
     "react-codemirror": "^1.0.0",
     "react-codemirror2": "^7.2.1",
