added splash screen 💦

--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^3.6.2",
+    "@types/app-root-path": "^1.2.4",
     "@types/codemirror": "0.0.98",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.4",
+    "app-root-path": "^3.0.0",
     "codemirror": "^5.58.0",
     "concurrently": "^5.3.0",
+    "electron-is-dev": "^1.2.0",
+    "electron-splashscreen": "^1.0.0",
     "monaco-editor": "^0.21.0",
     "react": "^16.13.1",
     "react-codemirror": "^1.0.0",
